fix: 🐛 修复CollapseItem组件在微信小程序中展开/收起时指向图标未跟随转动的问题

--- a/src/uni_modules/wot-design-uni/components/wd-collapse-item/index.scss
+++ b/src/uni_modules/wot-design-uni/components/wd-collapse-item/index.scss
@@ -39,7 +39,7 @@
     font-size: $-collapse-title-fs;
   }
 
-  @include e(arrow) {
+  @include edeep(arrow) {
     display: block;
     font-size: $-collapse-arrow-size;
     color: $-collapse-arrow-color;
